font and spacing fix

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ p{
 }
 
 .currency {
-    padding: 40px 0;
+    padding: 33px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
